--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "gulp test",
-    "prepublish": "npm test"
+    "prepublish": "npm test",
+    "demo": "gulp accessSniff-json"
   },
   "repository": {
     "type": "git",
